@@ -354,7 +354,7 @@ static SEXP in_do_download(SEXP args)
     else
         headers = CHAR(STRING_ELT(sheaders, 0));
 #ifdef Win32
-    if (!quiet && !pbar.wprog)
+    if (!quiet && R_Interactive && !pbar.wprog)
     {
         pbar.wprog = newwindow(_("Download progress"), rect(0, 0, 540, 100), Titlebar | Centered);
         setbackground(pbar.wprog, dialog_bg());
@@ -452,7 +452,7 @@ static SEXP in_do_download(SEXP args)
             }
             else
                 strcat(buf, url);
-            if (!quiet)
+            if (!quiet && R_Interactive)
             {
                 settext(pbar.l_url, buf);
                 setprogressbarrange(pbar.pb, 0, guess / factor);
@@ -472,7 +472,7 @@ static SEXP in_do_download(SEXP args)
                     error(_("write failed"));
                 nbytes += len;
 #ifdef Win32
-                if (!quiet)
+                if (!quiet && R_Interactive)
                 {
                     if (nbytes > guess)
                     {
@@ -519,7 +519,7 @@ static SEXP in_do_download(SEXP args)
             }
 #ifdef Win32
             R_FlushConsole();
-            if (!quiet)
+            if (!quiet && R_Interactive)
             {
                 endcontext(&(pbar.cntxt));
                 doneprogressbar(&pbar);
@@ -581,7 +581,7 @@ static SEXP in_do_download(SEXP args)
             }
             else
                 strcat(buf, url);
-            if (!quiet)
+            if (!quiet && R_Interactive)
             {
                 settext(pbar.l_url, buf);
                 setprogressbarrange(pbar.pb, 0, guess / factor);
@@ -604,7 +604,7 @@ static SEXP in_do_download(SEXP args)
                     error(_("write failed"));
                 nbytes += len;
 #ifdef Win32
-                if (!quiet)
+                if (!quiet && R_Interactive)
                 {
                     if (nbytes > guess)
                     {
@@ -651,7 +651,7 @@ static SEXP in_do_download(SEXP args)
             }
 #ifdef Win32
             R_FlushConsole();
-            if (!quiet)
+            if (!quiet && R_Interactive)
             {
                 endcontext(&(pbar.cntxt));
                 doneprogressbar(&pbar);
